k8s/database/mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: task-platform

spec:
  clusterIP: None

  selector:
    app: mongodb

  ports:
    - port: 27017
      targetPort: 27017
